# rs-raspi-opencv-monitor

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
templates/: index.html
